WebVR: handle window.rAF while presenting

We currently aren't processing the normal vsync/BeginFrame events
during WebVR presentation, this means that only vrDisplay.rAF
callbacks get executed, not window.rAF callbacks. This breaks
applications that depend on window.rAF for background processing,
so we should continue executing those callbacks too.

This patch does not enable requestIdleCallback handling, that is
significantly more complex and we're looking into that separately.

BUG=704341

Review-Url: https://codereview.chromium.org/2812253004
Cr-Commit-Position: refs/heads/master@{#464233}

Former-commit-id: 5873ff63b705173921eddc8741704fbde962a41f